--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,13 @@
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
+
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <!-- Sections -->
+          <a href="https://michinobu.jp/tec/">工作室</a> //
+          <a href="https://michinobu.jp/l/">厚生部</a> //
+          <a href="https://michinobu.jp/p/">政治局</a>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -39,13 +43,6 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
-        
-        <!-- Sections -->
-        <ul>
-          <li><a href="https://michinobu.jp/tec/">工作室</a></li>
-          <li><a href="https://michinobu.jp/l/">厚生部</a></li>
-          <li><a href="https://michinobu.jp/p/">政治局</a></li>
-        </ul>
 
         <!-- License -->
         <p>&copy; Michinobu Maeda.</p>
