--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,17 +4,28 @@
 @import "{{ site.theme }}";
 
 body {
-  font-family: "Yu Gothic Medium", "YuGothic Medium", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 18px;
+  font: 18px/1.5 "Yu Gothic Medium", "YuGothic Medium", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 500;
   color: #111111;
   line-height: 1.8em;
+  margin: 0;
+  padding: 0;
+  background-color: #e0e0e0;
 }
 .wrapper {
   width: 920px;
 }
-header {
+header, footer {
   width: 270px;
+  z-index: -1;
+  padding: 24px 4px;
+  margin: 8px 0;
+  padding: 16px 4px;
 }
 section {
   width: 620px;
+  background-color: #f0f0f0;
+  margin: 8px 0;
+  padding: 16px 8px;
+  word-break: break-all;
 }
