add footer contents

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,6 +75,23 @@
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>
+          <a href="https://twitter.com/mixnb">
+            <img style="height: 18px; margin-right: 16px;" src="img/twitter.png" title="Twitter" alt="Twitter" />
+          </a>
+          <a href="https://www.facebook.com/michinobu.maeda">
+            <img style="height: 18px; margin-right: 16px;" src="img/facebook.png" title="Facebook" alt="Facebook" />
+          </a>
+          <a href="https://www.instagram.com/michinobumaeda/">
+            <img style="height: 18px; margin-right: 16px;" src="img/instagram.png" title="Instagram" alt="Instagram" />
+          </a>
+          <a href="http://mixi.jp/show_profile.pl?id=8734038">
+            <img style="height: 18px; margin-right: 16px;" src="img/mixi.png" title="mixi" alt="mixi" />
+          </a>
+        </p>
+        <div>
+          <img src="img/qrcode.png" alt="michinobu.jp" style="width: 128px;" />
+        </div>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
