--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -37,6 +37,9 @@ h1, h2, h3, h4, h5, h6 {
 pre {
   padding: 0;
 }
+pre code.hljs {
+  background-color: #f8f8f8;
+}
 p code {
   padding: 0 2px;
   color: maroon;
