--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,5 +112,7 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script src="/js/site.js"></script>
+    <script>filterByTag('ALL')</script>
   </body>
 </html>
