update packages and bugfix: css

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -12,10 +12,10 @@ body {
 }
 header, footer {
   width: 270px;
-  max-width: 99%;
+  max-width: 96%;
   z-index: -1;
   padding: 24px 4px;
-  margin: 8px 0;
+  margin: 0;
   padding: 16px 4px;
 }
 footer {
@@ -23,9 +23,9 @@ footer {
 }
 section {
   width: 620px;
-  max-width: 99%;
+  max-width: 96%;
   background-color: #f0f0f0;
-  margin: 8px 0;
+  margin: 0;
   padding: 16px 8px;
   word-break: break-all;
 }
