--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,11 @@
         {% if site.github.is_project_page %}
         <p>This site is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>
+          Hosted on GitHub Pages<br />
+          - <a href="https://github.com/MichinobuMaeda/MichinobuMaeda.github.io">Source</a><br />
+          - Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+        </p>
         <p>
           <a style="padding: 0 8px 0 8px;" href="https://twitter.com/mixnb">
             <img style="height: 18px;" src="/img/twitter.png" title="Twitter" alt="Twitter" />
