--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="みちのぶのねぐら">
-    <meta property="og:image" content="/img/dragon2013.jpg">
+    <meta property="og:image" content="https://pages.michinobu.jp/img/dragon2013.jpg">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BRY447EKHY"></script>
