--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,7 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script src="https://unpkg.com/mermaid@8.9.3/dist/mermaid.min.js"></script>
     <script src="/js/site.js"></script>
     <script>filterByTag('ALL')</script>
   </body>
