change url of mastodon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
           <a style="padding: 0 8px 0 8px;" href="https://twitter.com/mixnb">
             <img style="height: 18px;" src="/img/twitter.png" title="Twitter" alt="Twitter" />
           </a>
-          <a style="padding: 0 8px 0 8px;" rel="me" href="https://mstdn.jp/@micmaeda">
+          <a style="padding: 0 8px 0 8px;" rel="me" href="https://toot.blue/@micmaeda">
             <img style="height: 18px;" src="/img/mastodon.png" title="Twitter" alt="Mastodon" />
           </a>
           <a style="padding: 0 8px 0 8px;" href="https://www.facebook.com/michinobu.maeda">
