--- a/template/layout.html
+++ b/template/layout.html
@@ -2,7 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
 
     <!-- Twitter summary card -->
     <meta
@@ -27,7 +30,7 @@
       content="https://pages.michinobu.jp/img/dragon2013.png"
     />
 
-    <link href="{{&root}}main.css" rel="stylesheet" />
+    <link href="{{&root}}css/main.css" rel="stylesheet" />
 
     <!-- MathJax: https://www.mathjax.org/ -->
     <script>
@@ -72,33 +75,33 @@
       mermaid.initialize({ startOnLoad: true });
     </script>
 
-    <header>
-      <a href="{{&root}}"
-        ><img
-          class="site-image"
-          src="{{&root}}img/logo.png"
-          alt="dragon image"
-        />
-        みちのぶのねぐら</a
-      >
-      <nav>
-        <ul class="categories">
-          {{#categories}}
-          <li><a href="{{&root}}{{&path}}">{{name}}</a></li>
-          {{/categories}}
-        </ul>
-      </nav>
-    </header>
-
     <div id="main">
-      <div class="content">
+      <header>
+        <a href="{{&root}}"
+          ><img
+            class="site-image"
+            src="{{&root}}img/logo.png"
+            alt="dragon image"
+          />
+          みちのぶのねぐら</a
+        >
+        <nav>
+          <ul class="categories">
+            {{#categories}}
+            <li><a href="{{&root}}{{&path}}">{{name}}</a></li>
+            {{/categories}}
+          </ul>
+        </nav>
+      </header>
+
+      <div id="content">
         {{#tag_cloud}}
         <ul id="tag-cloud">
           {{#tag}}
           <li id="tag-{{name}}">
             <a
               href="{{&root}}{{&category.path}}/?tag={{name}}"
-              class="tag-{{count}}"
+              class="{{class}}"
               >{{name}}</a
             >
           </li>
@@ -121,113 +124,104 @@
         </ul>
         {{/pages}} {{&content}}
       </div>
-
-      <footer id="footer">
-        {{#lastUpdatesCount}}
-        <h2>Latest Updates</h2>
-        <ul id="updates">
-          {{#updates}}
-          <li>
-            <span class="date">{{updated_at}}</span><br />
-            <a href="{{&root}}{{&path}}">{{title}}</a>
-          </li>
-          {{/updates}}
-        </ul>
-        {{/lastUpdatesCount}}
-
-        <h2>Contacts</h2>
-        <ul id="social-media">
-          <li>
-            <a rel="me" href="https://toot.blue/@micmaeda"
-              ><img
-                src="{{&root}}img/mastodon.png"
-                title="Facebook"
-                alt="Mastodon"
-            /></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/mixnb"
-              ><img
-                src="{{&root}}img/twitter.png"
-                title="Twitter"
-                alt="Twitter"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/michinobu.maeda"
-              ><img
-                src="{{&root}}img/facebook.png"
-                title="Facebook"
-                alt="Facebook"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/michinobumaeda/"
-              ><img
-                src="{{&root}}img/instagram.png"
-                title="Instagram"
-                alt="Instagram"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.threads.net/@michinobumaeda"
-              ><img
-                src="{{&root}}img/threads.png"
-                title="Threads"
-                alt="Threads"
-            /></a>
-          </li>
-          <li>
-            <a href="https://bsky.app/profile/micmaeda.bsky.social"
-              ><img
-                src="{{&root}}img/bluesky.png"
-                title="BlueSky"
-                alt="BlueSky"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.tumblr.com/michinobumaeda"
-              ><img src="{{&root}}img/tumblr.png" title="Tumblr" alt="Tumblr"
-            /></a>
-          </li>
-          <li>
-            <a href="http://mixi.jp/show_profile.pl?id=8734038"
-              ><img src="{{&root}}img/mixi.png" title="mixi" alt="mixi"
-            /></a>
-          </li>
-          <li>
-            <a href="mailto:michinobumaeda@gmail.com"
-              ><img src="{{&root}}img/mail.png" title="mail" alt="mail"
-            /></a>
-          </li>
-        </ul>
-
-        <h2>Legal Notices</h2>
-        <div id="license">
-          <div class="license-logo">
-            <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
-              ><img
-                alt="Creative Commons License"
-                style="border-width: 0"
-                src="https://i.creativecommons.org/l/by/4.0/88x31.png"
-            /></a>
-          </div>
-          <div class="license-desc">
-            This work is licensed under a
-            <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
-              >Creative Commons Attribution 4.0 International License</a
-            >.
-          </div>
-          <div class="copyright">&copy; 2004-{{year}} Michinobu Maeda.</div>
-          <div>
-            This site is hosted on GitHub Pages:
-            <a href="https://github.com/MichinobuMaeda/MichinobuMaeda.github.io"
-              >Source</a
-            >
-          </div>
-        </div>
-      </footer>
     </div>
+
+    <footer id="footer">
+      {{#lastUpdatesCount}}
+      <h2>Latest Updates</h2>
+      <ul id="updates">
+        {{#updates}}
+        <li>
+          <span class="date">{{updated_at}}</span><br />
+          <a href="{{&root}}{{&path}}">{{title}}</a>
+        </li>
+        {{/updates}}
+      </ul>
+      {{/lastUpdatesCount}}
+
+      <h2>Contacts</h2>
+      <ul id="social-media">
+        <li>
+          <a rel="me" href="https://toot.blue/@micmaeda"
+            ><img
+              src="{{&root}}img/mastodon.png"
+              title="Facebook"
+              alt="Mastodon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/mixnb"
+            ><img src="{{&root}}img/twitter.png" title="Twitter" alt="Twitter"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/michinobu.maeda"
+            ><img
+              src="{{&root}}img/facebook.png"
+              title="Facebook"
+              alt="Facebook"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/michinobumaeda/"
+            ><img
+              src="{{&root}}img/instagram.png"
+              title="Instagram"
+              alt="Instagram"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.threads.net/@michinobumaeda"
+            ><img src="{{&root}}img/threads.png" title="Threads" alt="Threads"
+          /></a>
+        </li>
+        <li>
+          <a href="https://bsky.app/profile/micmaeda.bsky.social"
+            ><img src="{{&root}}img/bluesky.png" title="BlueSky" alt="BlueSky"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.tumblr.com/michinobumaeda"
+            ><img src="{{&root}}img/tumblr.png" title="Tumblr" alt="Tumblr"
+          /></a>
+        </li>
+        <li>
+          <a href="http://mixi.jp/show_profile.pl?id=8734038"
+            ><img src="{{&root}}img/mixi.png" title="mixi" alt="mixi"
+          /></a>
+        </li>
+        <li>
+          <a href="mailto:michinobumaeda@gmail.com"
+            ><img src="{{&root}}img/mail.png" title="mail" alt="mail"
+          /></a>
+        </li>
+      </ul>
+
+      <h2>Legal Notices</h2>
+      <div id="license">
+        <div id="license-logo">
+          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
+            ><img
+              alt="Creative Commons License"
+              style="border-width: 0"
+              src="https://i.creativecommons.org/l/by/4.0/88x31.png"
+          /></a>
+        </div>
+        <div id="license-desc">
+          This work is licensed under a
+          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
+            >Creative Commons Attribution 4.0 International License</a
+          >.
+        </div>
+        <div id="copyright">&copy; 2004-{{year}} Michinobu Maeda.</div>
+        <div>
+          This site is hosted on GitHub Pages:
+          <a href="https://github.com/MichinobuMaeda/MichinobuMaeda.github.io"
+            >Source</a
+          >
+        </div>
+      </div>
+    </footer>
 
     <script src="{{&root}}js/main.js"></script>
   </body>
