--- a/template/layout.html
+++ b/template/layout.html
@@ -88,7 +88,7 @@
         <nav>
           <ul class="categories">
             {{#categories}}
-            <li><a href="{{&root}}{{&path}}">{{name}}</a></li>
+            <li><a href="{{&root}}{{&path}}/">{{name}}</a></li>
             {{/categories}}
           </ul>
         </nav>
